--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,11 @@
 			<artifactId>CCP_REST_SMS_SDK_JAVA_v2.6.3r</artifactId>
 			<!--<version>2.6.3</version>-->
 		</dependency>
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>serviceapp</finalName>
